--- a/Index.html
+++ b/Index.html
@@ -2,21 +2,38 @@
 <html lang="sv">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name ="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <h2>Om mig</h2>
-<p>Hej mitt namn är Tobias Iden, jag är en elev på Nti gymnasiet i södertälje hamn. Det här är lite om mig och vad mina intressen är tilsamans med några bilder.</p>
+<img src="azeezsuger.png" alt="Get">
+<p>Hej mitt namn är Tobias Iden, jag är en 17 år och bor i en liten by i enhörna som heter ekeby. Ekeby har bara runt 200 invånare så alla känner varann.
+    Jag går just nu på ntig i södertälje hamn. Vilket är en liten teknik skola.  </p>
 <h3>Mina intressen</h3>
-<p>Mina största intressen är nog datorer och kampsport. Jag har hållt på med datorer sen jag var ett litet barn och spelade club penguin. Och mitt intresse för kampsport började nog när jag var runt 13/14 år då min kompis började med det och jag blev fort intereserad.</p>
+<p>Mina största intressen är nog datorer och kampsport. Jag har hållt på med datorer sen jag var ett litet barn och spelade club penguin. Och mitt intresse för kampsport började nog när jag var runt 13/14 år då min kompis började med det och jag blev fort intereserad. Nu när jag är 17 är nog thaiboxning eller mma mina favorit grejer att kolla på.</p>
 <h3>Spel</h3>
-<p>Spel jag spelar är nog mest LoL (league of legends) och csgo (counterstrike global offensive</p>
-<img src="" alt="" id="T1">
+<p>Spel jag spelar är nog mest LoL (league of legends) och csgo (counterstrike global offensive)</p>
+
+<h1 class="bigTop">Top 5 UFC fighters</h3>
+<ul>
+    <li>
+        <img src="Ufc2.jpg" alt="tony" id="tony">
+        Tony Furgeson
+    </li>
+    <li>Hej</li>
+
+    <li></li>
+    <li></li>
+    <li></li>
+</ul>
+
+
+
 <div></div>
 
-<img src="Ss1.png" alt="" id="T2">
 </body>
-</html>
+</html> 
