--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="sv">
 <head>
+        <script src="lol.js"></script>
+
     <meta charset="UTF-8">
     <meta name ="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -20,11 +22,11 @@
 
 <h1 class="bigTop">Top 5 UFC fighters</h3>
 <ul>
-    <li>
+    <div>
         <img src="Ufc2.jpg" alt="tony" id="tony">
-        Tony Furgeson
-    </li>
-    <li>Hej</li>
+        <p>Furgeson</p>
+    </div>
+    <div>Hej</div>
 
     <li></li>
     <li></li>
